--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-invertible-scroll-view": "^1.1.0",
     "react-native-parallax-view": "^2.0.6",
     "react-native-push-notification": "^3.0.1",
+    "react-native-router-flux": "^4.0.0-beta.21",
     "react-native-scrollable-tab-view": "^0.6.7",
     "react-navigation": "^1.0.0-beta.11"
   },
