--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,13 +90,13 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.chitchat"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         ndk {
@@ -133,6 +133,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-app-shortcuts')
     compile project(':react-native-push-notification')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-image-picker')
