--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'ChitChat'
+include ':react-native-app-shortcuts'
+project(':react-native-app-shortcuts').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-app-shortcuts/android')
 include ':react-native-push-notification'
 project(':react-native-push-notification').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-push-notification/android')
 include ':react-native-fetch-blob'
