--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "native-base": "^2.3.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.3",
+    "react-native-app-shortcuts": "^0.2.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^0.26.6",
     "react-native-invertible-scroll-view": "^1.1.0",
